<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Background Image -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/civilbg3" />

    <!-- Overlay View -->
    <View
        android:id="@+id/overlayView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D9071C3B"/>

    <!-- Top Bar -->
    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Left-side Image -->
        <ImageView
            android:id="@+id/leftImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:src="@drawable/headicon" />

        <!-- Centered Title -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Company Details"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="#61a5f2"/>

        <TextView
            android:id="@+id/mandatoryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/leftImage"
            android:layout_alignParentStart="true"
            android:layout_marginStart="117dp"
            android:layout_marginTop="-23dp"
            android:text="*"
            android:textColor="#FF0000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/mandatoryTexts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/leftImage"
            android:layout_alignParentStart="true"
            android:layout_marginStart="125dp"
            android:layout_marginTop="-23dp"
            android:text="are mandatory"
            android:textColor="#61a5f2"
            android:textSize="14sp" />

    </RelativeLayout>

    <!-- Scrollable Content -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:layout_constraintBottom_toTopOf="@+id/footerLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:elevation="4dp"
            android:paddingBottom="24dp">

            <!-- Upload Image -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_hint"
                android:textSize="16sp"
                android:textColor="#61a5f2"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="(passport size)"
                android:textSize="12sp"
                android:textColor="#61a5f2"
                android:layout_marginBottom="8dp"/>

            <ImageView
                android:id="@+id/uploadImage"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"
                android:src="@drawable/upload"
                android:background="#61a5f2"
                android:padding="16dp"
                android:clickable="true"
                android:focusable="true" />
            <TextView
                android:id="@+id/image_file_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="No file chosen"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:visibility="gone"/>



            <!-- Company Name -->
            <EditText
                android:id="@+id/company_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/company_name_hint"
                android:textSize="16sp"
                android:padding="12dp"
                android:textColor="@color/white"
                android:textColorHint="#61a5f2"
                android:backgroundTint="#FFFFFF"/>

            <!-- Mobile Number -->
            <EditText
                android:id="@+id/mobile_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile_number_hint"
                android:inputType="phone"
                android:textSize="16sp"
                android:padding="12dp"
                android:textColor="@color/white"
                android:textColorHint="#61a5f2"
                android:backgroundTint="#FFFFFF"/>

            <!-- Address -->
            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address_hint"
                android:textSize="16sp"
                android:padding="12dp"
                android:textColor="@color/white"
                android:textColorHint="#61a5f2"
                android:backgroundTint="#FFFFFF"/>

            <!-- Email -->
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:textSize="16sp"
                android:padding="12dp"
                android:textColor="@color/white"
                android:textColorHint="#61a5f2"
                android:backgroundTint="#FFFFFF"/>

            <!-- Website -->
            <EditText
                android:id="@+id/website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Website"
                android:inputType="textUri"
                android:textSize="16sp"
                android:padding="12dp"
                android:textColor="@color/white"
                android:textColorHint="#61a5f2"
                android:backgroundTint="#FFFFFF"/>

            <!-- GST Certificate Number -->
            <EditText
                android:id="@+id/gst_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/gst_number_hint"
                android:inputType="text"
                android:textSize="16sp"
                android:padding="12dp"
                android:textColor="@color/white"
                android:textColorHint="#61a5f2"
                android:backgroundTint="#FFFFFF"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="16dp">

                <!-- Upload Soil Test PDF -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginEnd="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/soil_test_hint"
                        android:textSize="10sp"
                        android:textColor="#61a5f2"
                        android:layout_marginBottom="8dp"/>


                    <ImageView
                        android:id="@+id/upload_soil_test"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/upload"
                        android:background="#61a5f2"
                        android:padding="16dp"
                        android:clickable="true"
                        android:focusable="true"/>

                    <TextView
                        android:id="@+id/pdf_soil_test_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="No file chosen"
                        android:textSize="14sp"
                        android:textColor="@color/white"
                        android:visibility="gone"/>
                </LinearLayout>

                <!-- Upload Building Draft PDF -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginStart="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/building_hint"
                        android:textSize="10sp"
                        android:textColor="#61a5f2"
                        android:layout_marginBottom="8dp"/>

                    <ImageView
                        android:id="@+id/upload_building_draft"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/upload"
                        android:background="#61a5f2"
                        android:padding="16dp"
                        android:clickable="true"
                        android:focusable="true"/>

                    <TextView
                        android:id="@+id/pdf_building_draft_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="No file chosen"
                        android:textSize="14sp"
                        android:textColor="@android:color/white"
                        android:visibility="gone"/>
                </LinearLayout>

            </LinearLayout>

            <!-- Upload PDFs (Second Row) -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="16dp">

                <!-- Upload Concrete Test PDF -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginEnd="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/concrete_test_hint"
                        android:textSize="10sp"
                        android:textColor="#61a5f2"
                        android:layout_marginBottom="8dp"/>

                    <ImageView
                        android:id="@+id/upload_concrete_test"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/upload"
                        android:background="#61a5f2"
                        android:padding="16dp"
                        android:clickable="true"
                        android:focusable="true"/>

                    <TextView
                        android:id="@+id/pdf_concrete_test_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="No file chosen"
                        android:textSize="14sp"
                        android:textColor="@android:color/white"
                        android:visibility="gone"/>
                </LinearLayout>

                <!-- Upload Government Rules PDF -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginStart="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Govr_hint"
                        android:textSize="10sp"
                        android:textColor="#61a5f2"
                        android:layout_marginBottom="8dp"/>

                    <ImageView
                        android:id="@+id/upload_govt_rules"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/upload"
                        android:background="#61a5f2"
                        android:padding="16dp"
                        android:clickable="true"
                        android:focusable="true"/>

                    <TextView
                        android:id="@+id/pdf_govt_rules_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="No file chosen"
                        android:textSize="14sp"
                        android:textColor="@android:color/white"
                        android:visibility="gone"/>
                </LinearLayout>
            </LinearLayout>

            <!-- Submit Button -->
            <Button
                android:id="@+id/submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Submit"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="100dp"
                android:backgroundTint="#2196F3"/>
        </LinearLayout>

    </ScrollView>

    <!-- Fixed Footer Layout -->
    <LinearLayout
        android:id="@+id/footerLayout"
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:orientation="horizontal"
        android:padding="16dp"
        android:background="@drawable/rounded_footer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center">

        <!-- First Inner Layout -->
        <LinearLayout
            android:id="@+id/engihome4"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/home" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Home"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- Second Inner Layout -->
        <LinearLayout
            android:id="@+id/engiupload4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/upload" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Upload"
                android:textSize="12sp"
                android:textColor="@color/white"/>
        </LinearLayout>

        <!-- Third Inner Layout -->
        <LinearLayout
            android:id="@+id/engilogout4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/account" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Profile"
                android:textSize="12sp"
                android:textColor="@color/white"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
