<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Background Image -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/civilbg6" />

    <!-- Overlay View -->
    <View
        android:id="@+id/overlayView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D9071C3B"/>

    <!-- Top Bar -->
    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Left-side Image -->
        <ImageView
            android:id="@+id/leftImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:src="@drawable/headicon" />

        <!-- Centered Title -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Basement Details"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="#61a5f2"/>

        <TextView
            android:id="@+id/mandatoryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/leftImage"
            android:layout_alignParentStart="true"
            android:layout_marginStart="117dp"
            android:layout_marginTop="-23dp"
            android:text="*"
            android:textColor="#FF0000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/mandatoryTexts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/leftImage"
            android:layout_alignParentStart="true"
            android:layout_marginStart="125dp"
            android:layout_marginTop="-23dp"
            android:text="are mandatory"
            android:textColor="#61a5f2"
            android:textSize="14sp" />

    </RelativeLayout>

    <!-- Scrollable Content -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:elevation="4dp"
            android:paddingBottom="24dp">

            <!-- Upload Image -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basement_hint"
                android:textSize="16sp"
                android:textColor="#61a5f2"
                android:layout_marginBottom="8dp"/>

            <ImageView
                android:id="@+id/upload_image1"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"
                android:src="@drawable/upload"
                android:background="#61a5f2"
                android:padding="16dp"
                android:clickable="true"
                android:focusable="true"/>

            <!-- Upload Image -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/related_hint"
                android:textSize="16sp"
                android:textColor="#61a5f2"
                android:layout_marginBottom="8dp"/>

            <ImageView
                android:id="@+id/upload_image2"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"
                android:src="@drawable/upload"
                android:background="#61a5f2"
                android:padding="16dp"
                android:clickable="true"
                android:focusable="true"/>

            <!-- Upload Image -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/steel_hint"
                android:textSize="16sp"
                android:textColor="#61a5f2"
                android:layout_marginBottom="8dp"/>

            <ImageView
                android:id="@+id/upload_image3"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"
                android:src="@drawable/upload"
                android:background="#61a5f2"
                android:padding="16dp"
                android:clickable="true"
                android:focusable="true"/>

            <!-- Upload Image -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cement_hint"
                android:textSize="16sp"
                android:textColor="#61a5f2"
                android:layout_marginBottom="8dp"/>

            <ImageView
                android:id="@+id/upload_image4"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"
                android:src="@drawable/upload"
                android:background="#61a5f2"
                android:padding="16dp"
                android:clickable="true"
                android:focusable="true"/>

            <!-- Upload Image -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jelly_hint"
                android:textSize="16sp"
                android:textColor="#61a5f2"
                android:layout_marginBottom="8dp"/>

            <ImageView
                android:id="@+id/upload_image5"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"
                android:src="@drawable/upload"
                android:background="#61a5f2"
                android:padding="16dp"
                android:clickable="true"
                android:focusable="true"/>

            <!-- Submit Button -->
            <Button
                android:id="@+id/submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Submit"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="100dp"
                android:backgroundTint="#2196F3"/>
        </LinearLayout>

    </ScrollView>

    <!-- Fixed Footer Layout -->
    <LinearLayout
        android:id="@+id/footerLayout"
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:orientation="horizontal"
        android:padding="16dp"
        android:background="@drawable/rounded_footer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center">

        <!-- First Inner Layout -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/home" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Home"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- Second Inner Layout -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/upload" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Upload"
                android:textSize="12sp"
                android:textColor="@color/white"/>
        </LinearLayout>

        <!-- Third Inner Layout -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/logout" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Logout"
                android:textSize="12sp"
                android:textColor="@color/white"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
